MDEV-12849 Out-of-range errors when casting hex-hybrid to SIGNED and UNSIGNED